--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 		<meta name="google-site-verification" content="NIW4Bzmoi4pPPxGyBK158SsE1B5bKovZbP4qPd04V84" />
 		<meta charset="utf-8">
 
-		<title>PSYREX | thePSYREX</title>
-		<meta name="keywords" content="PSYREX">
-		<meta name="description" content="i am psyrex, the psyrex,PSYREX">
+		<title>PSY LOGOS</title>
+		<meta name="keywords" content="psy logos">
+		<meta name="description" content="">
         <meta name="author" content="hell_xyz">
         
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -38,9 +38,9 @@
 						<h3>“Love yourself,</h3>
 						<h3>in order to be loved.”</h3>
 						<h1>Psγrєx</h1>
-						<h2 class="rotate">WEEB, PERVERTED GENTLEMAN, READER, PSYREX</h2>
-						<p>I AM PSYREX.</p>
-						<a href="#work" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">About Me</a>
+						<h2 class="rotate">NOT,A,PROFESSIONAL,</h2>
+						<p>MAKING THESE BECAUSE I FEEL GOOD.</p>
+						<a href="#work" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">About ME</a>
 					</div>
 					<div class="col-md-2"></div>
 				</div>
@@ -64,8 +64,8 @@
 								<i class="fa fa-code"></i>
 							</div>
 							<div class="media-body">
-								<h3 class="media-heading">Find me here</h3>
-								<p>Developer of <a rel="nofollow" href="https://t.me/incofficials">,My INC Village</a>. A telegram group where i had spend a wonderfull time.</p>
+								<h3 class="media-heading">Check samples here</h3>
+								<p>Developer of <a rel="nofollow" href="https://t.me/psy_L0G0S">,logos </a>. for everyone ,try your luck.</p>
 							</div>
 						</div>
 					</div>
@@ -77,7 +77,7 @@
 							</div>
 							<div class="media-body">
 								<h3 class="media-heading">Editor</h3>
-								<p>I am a all time all things editor , i edit photo, logo, code, music, Everything 🔥</p>
+								<p>I can edit Everything 🔥</p>
 							</div>
 						</div>
 					</div>
@@ -89,7 +89,7 @@
 							</div>
 							<div class="media-body">
 								<h3 class="media-heading">Learning</h3>
-								<p>Life is a game and i am playing to win, learning to live </p>
+								<p>do never stop learning beausae life never stops teaching</p>
 							</div>
 						</div>
 					</div>
@@ -99,54 +99,18 @@
 		</div>
 		<!-- end work -->
 
-		<!-- start about -->
-		<div id="about" class="section">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-6 col-xs-11 wow fadeInLeft" data-wow-delay="0.9s">
-						<h2>My Stats</h2>
-						<h4>Moi Statistics</h4>
-					</div>
-					<div class="col-md-6 col-xs-11 wow fadeInRight" data-wow-delay="0.9s">
-						<span class="text-top">collection<small>99%</small></span>
-							<div class="progress">
-								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 99%;"></div>
-							</div>
-						<span>logo editing<small>60%</small></span>
-							<div class="progress">
-								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
-							</div>
-						<span>video editing<small>10%</small></span>
-							<div class="progress">
-								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 10%;"></div>
-							</div>
-						<span>music<small>1%</small></span>
-							<div class="progress">
-								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 1%;"></div>
-							</div>
-						<span>coding<small>30%</small></span>
-							<div class="progress">
-								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 30%;"></div>
-							</div>
-				     		</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- end about -->
-
 		<!-- start portfolio -->
 		<div id="portfolio" class="section">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<h2 class="wow bounce">My Waifu</h2>
+					<h2 class="wow bounce">SAMPLES</h2>
 				</div>
 				<div class="col-md-4 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
 					<div class="portfolio-thumb">
 						<img src="images/zerotwo.jpg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
-								<h4>ZeroTwo</h4>
+								<h4>1</h4>
 
 							</div>
 					</div>
@@ -155,7 +119,7 @@
 					<div class="portfolio-thumb">
 						<img src="images/chizuru.jpg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
-								<h4>Mizuhara</h4>
+								<h4>2</h4>
 
 							</div>
 					</div>
@@ -164,7 +128,7 @@
 					<div class="portfolio-thumb">
 						<img src="images/violet.jpg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
-								<h4>Violet Evergarden</h4>
+								<h4>3</h4>
 
 							</div>
 					</div>
@@ -173,7 +137,7 @@
 					<div class="portfolio-thumb">
 						<img src="images/mai.jpg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
-								<h4>Mai Sakurajima</h4>
+								<h4>4</h4>
 
 							</div>
 					</div>
@@ -193,14 +157,6 @@
 							<p><i class="fa fa-envelope-o"></i> iampsyrex@gmail.com</p>
 							<p><i class="fa fa-map-marker"></i> India 🇮🇳</p>
 						</address>
-					</div>
-					<div class="col-lg-6 col-md-6 col-xs-10 wow fadeInUp" data-wow-delay="0.6s">
-						<form role="form" method="post" action="phps/send.php">
-							<input name="name" type="text" class="form-control" id="name" placeholder="Your Name">
-							<input name="email" type="email" class="form-control" id="email" placeholder="Your Email">
-							<textarea name="message" rows="5" class="form-control" id="message" placeholder="Your Message"></textarea>
-							<input name="send" type="submit" class="form-control" id="send" value="SEND ME">
-						</form>
 					</div>
 					<div class="col-md-1 col-sm-1"></div>
 				</div>
