--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 						<h3>“Love yourself,</h3>
 						<h3>in order to be loved.”</h3>
 						<h1>Psγrєx</h1>
-						<h2 class="rotate">NOT,A,PROFESSIONAL,</h2>
-						<p>MAKING THESE BECAUSE I FEEL GOOD.</p>
+						<h2 class="rotate">NOT,A,PROFESSIONAL</h2>
+						<p>just doing everything</p>
 						<a href="#work" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">About ME</a>
 					</div>
 					<div class="col-md-2"></div>
