--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 		<title>PSY LOGOS</title>
 		<meta name="keywords" content="psy logos">
-		<meta name="description" content="">
+		<meta name="description" content="psy logos">
         <meta name="author" content="hell_xyz">
         
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
