--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<div class="row">
 					<div class="col-md-2"></div>
 					<div class="col-md-8 wow fadeIn" data-wow-delay="0.9s">
-						<h3>“I am PSYREX”,</h3>
+						<h3>“I am PSYREX”</h3>
 						<h3>man of Focus, Commitment and Sheer fucking will</h3>
 						<h1>Psγrєx</h1>
 						<h2 class="rotate">NOT,A,PROFESSIONAL</h2>
